--- a/pc-accessories/locale/en.json
+++ b/pc-accessories/locale/en.json
@@ -3,6 +3,10 @@
 
   "categories": "Categories",
   "chooseCategory": "Choose Category",
+  "favorites": "Favorites",
+  "listOfYourFavorites": "List of accessories you favorited!",
+  "noFavoritesFound": "No favorites found",
+  "noFavoritesFoundMsg": "Looks like you have no favorite products.",
 
   "email": "Email",
   "name": "Name",
