--- a/pc-accessories/locale/ua.json
+++ b/pc-accessories/locale/ua.json
@@ -6,7 +6,10 @@
   "favorites": "Улюбені",
   "listOfYourFavorites": "Список ваших улюблених комплектуючих",
   "noFavoritesFound": "Улюблених не знайдено",
-  "noFavoritesFoundMsg": "Схоже, у вас немає улюблених комплектуючих .",
+  "noFavoritesFoundMsg": "Схоже, у вас немає улюблених комплектуючих.",
+  "noExactMatches": "Немає збігів",
+  "tryChangeFilters": "Спробуйте змінити фільтри",
+  "removeAllFilters": "Видалити всі фільтри",
 
   "email": "Пошта",
   "name": "Ім'я",
@@ -15,6 +18,7 @@
   "myFavorites": "Улюблені",
   "select": "Вибрати",
   "continue_": "Продовжити",
+  "search": "Пошук",
   "signIn": "Увійти",
   "signUp": "Реєстрація",
   "signOut": "Вийти",
