feat: detail view list

--- a/pc-accessories/locale/en.json
+++ b/pc-accessories/locale/en.json
@@ -1,6 +1,7 @@
 {
   "siteName": "PC Accessories",
 
+  "homePage": "Home Page",
   "categories": "Categories",
   "chooseCategory": "Choose Category",
   "favorites": "Favorites",
