--- a/pc-accessories/locale/ua.json
+++ b/pc-accessories/locale/ua.json
@@ -1,6 +1,7 @@
 {
   "siteName": "PC Accessories",
 
+  "homePage": "Головна Сторінка",
   "categories": "Категорії",
   "chooseCategory": "Вибрати категорію",
   "favorites": "Улюбені",
