feat: filter navbar with brands

--- a/pc-accessories/locale/en.json
+++ b/pc-accessories/locale/en.json
@@ -3,6 +3,8 @@
 
   "homePage": "Home Page",
   "categories": "Categories",
+  "brands": "Brands",
+  "filters": "Filters",
   "chooseCategory": "Choose Category",
   "favorites": "Favorites",
   "listOfYourFavorites": "List of accessories you favorited!",
