--- a/pc-accessories/locale/ua.json
+++ b/pc-accessories/locale/ua.json
@@ -3,6 +3,8 @@
 
   "homePage": "Головна Сторінка",
   "categories": "Категорії",
+  "brands": "Бренди",
+  "filters": "Фільтри",
   "chooseCategory": "Вибрати категорію",
   "favorites": "Улюбені",
   "listOfYourFavorites": "Список ваших улюблених комплектуючих",
