--- a/pc-accessories/locale/ua.json
+++ b/pc-accessories/locale/ua.json
@@ -17,6 +17,12 @@
   "price": "Ціна",
   "min": "Мін",
   "max": "Макс",
+  "orderBy": "Сортувати за",
+  "priceAsc": "Ціною по зростанню",
+  "priceDesc": "Ціною по спаданню",
+  "alphabet": "Алфавітом",
+  "viewCounter": "Кількістью переглядів",
+  "dateAdded": "Датою додавання",
 
   "email": "Пошта",
   "name": "Ім'я",
