fix: remove text

--- a/pc-accessories/locale/ua.json
+++ b/pc-accessories/locale/ua.json
@@ -45,5 +45,5 @@
   "createAccount": "Створити обліковий запис",
 
   "footerCopyright": "© 2023 PC Accessories",
-  "footerInfo": "KROK Дипломна робота"
+  "footerInfo": ""
 }
