--- a/pc-accessories/locale/en.json
+++ b/pc-accessories/locale/en.json
@@ -45,5 +45,5 @@
   "createAccount": "Create an account",
 
   "footerCopyright": "© 2023 PC Accessories",
-  "footerInfo": "KROK Thesis"
+  "footerInfo": ""
 }
